# conclave-serialize-c

./: CMakeLists.txt  deps.toml
.github/workflows/: build_linux.yml
docs/: index.adoc
src/: CMakeLists.txt
src/include/conclave-serialize/: client_in.h  client_out.h  commands.h  debug.h  serialize.h  server_in.h  server_out.h  types.h  version.h
src/lib/: CMakeLists.txt  client_in.c  client_out.c  debug.c  serialize.c  server_in.c  server_out.c
